--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,35 @@
-/*body {
-	background: #141414;
-	color: #ffffff;
-}*/
-
-.App > .row {
-  /*text-align: center;*/
-  overflow-x: auto;
-	flex-wrap: nowrap;
+.App {
+  text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.movies {
+  padding: 5px 25px 10px 25px;
+  max-width: 25%;
+  
+}
+
+.header {
+  background-color: #282c34;
+  height: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  padding: 20px;
+  cursor: pointer;
+}
+
+.movie-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.search > input[type="text"]{
+  width: 40%;
+  min-width: 170px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
