--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,21 @@
 }
 
 .movies {
-  padding: 5px 25px 10px 25px;
-  max-width: 20%;
-  
+  position: relative;
+  overflow: hidden;
+  /*width: 250px;*/
+  /*padding: 5px 25px 10px 25px;
+  max-width: 20%;*/
+  margin: 50px auto;
+
+}
+
+.img {
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 }
 
 .header {
@@ -20,6 +32,8 @@
   padding: 20px;
   cursor: pointer;
 }
+
+
 
 .movie-list {
   display: flex;
@@ -60,4 +74,50 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+/*Hover effect*/
+.imgtext {
+  color: white;
+  background: rgba(255, 255, 255, 0);
+  /*width: fit-content;
+  height: fit-content;*/
+  /*padding: 5px 25px 10px 25px;*/
+  opacity: 0;
+  position: absolute;
+  bottom: 0px;
+  -webkit-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+  margin: auto;
+  padding: 10px;
+  text-align: center;
+
+
+}
+/*
+.movies {
+  position: relative;
+  overflow: hidden;
+  width: 185px;
+  height: 185px;
+  margin: 50px auto;
+}*/
+
+.movies:hover img {
+  -webkit-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+  -webkit-filter: blur(1px);
+  -moz-filter: blur(1px);
+  -ms-filter: blur(1px);
+  -o-filter: blur(1px);
+  filter: blur(2px);
+  transform: scale(1.03);
+}
+
+.movies:hover .imgtext {
+  -webkit-opacity: 1;
+  opacity: 1;
 }
