--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,27 @@
   text-align: center;
 }
 
+img {
+  margin-right: 30px;   /* Horizontal Space */
+  margin-bottom: 30px;  /* Vertical Space */
+  width: 300px;
+  height: 450px;
+}
+
+/*
 .movies {
   padding: 5px 25px 10px 25px;
   max-width: 20%;
   
 }
+*/
+/*
+.image-container {
+  width: 120px;
+  height: 120px;
 
+}
+*/
 .header {
   background-color: #282c34;
   height: 70px;
@@ -25,6 +40,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  
 }
 
 .search > input[type="text"]{
@@ -61,6 +77,8 @@
     transform: rotate(360deg);
   }
 }
+
+
 
 /*
  HOVER EFFECT
